<resources>
    <string name="app_name">Video Downloader</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="downloading">Downloading</string>
    <string name="completed">Completed </string>
    <string name="Reels">Reels </string>
    <string name="settings">Settings</string>
    <string name="video_downloader">Video Downloader</string>
    <string name="reels">Reels</string>
    <string name="paste">Paste</string>


    <string name="delete">Delete</string>
    <string name="video">Video</string>
    <string name="audio">Audio</string>
    <string name="image">Image</string>


    <string name="video_deleted_permanantly">Video will be removed from your device permanently.</string>
    <string name="audio_deleted_permanantly">Audio will be removed from your device permanently.</string>
    <string name="image_deleted_permanantly">Image will be removed from your device permanently.</string>
    <string name="video_deleted">Video deleted succeesfully.</string>
    <string name="audio_deleted">Audio deleted successfully.</string>
    <string name="image_deleted">Image deleted successfully.</string>
    <string name="feedback">Feedback</string>
    <string name="one_tap_downloader">One Tap \nVideo Downloader</string>
    <string name="youtube">Youtube</string>
    <string name="browse_here">Browse here</string>
    <string name="suggested_websites">Suggested Websites</string>
    <string name="reddit">Reddit</string>
    <string name="dailymotion">Dailymotion</string>
    <string name="vimeo">Vimeo</string>
    <string name="insta">Instagram</string>
    <string name="fb">Facebook</string>
    <string name="google">Google</string>
    <string name="pin">Pinterest</string>
    <string name="twitch">Twitch</string>
    <string name="loading_ads">Loading Ads.</string>
    <string name="loading_ad">Loading Ad</string>
    <string name="do_you_want_to_exit">Do you want to Exit?</string>
    <string name="pick_your_interest">Pick Your Interests</string>
    <string name="done">Done</string>


    <string name="onboarding_title">Download Videos with Ease</string>
    <string name="onboarding_title_2">Fast and Secure Video Downloads</string>
    <string name="onboarding_title_3">Manage Your Downloads Efficiently</string>
    <string name="onboarding_description">Easily download your favorite videos in high quality and enjoy offline viewing anytime, anywhere.</string>
    <string name="onboarding_description_2">Download videos quickly and securely from various platforms with just a few taps.</string>
    <string name="onboarding_description_3">Organize and track your downloaded videos with detailed progress and management tools.</string>

    <string name="next">Next</string>
    <string name="finish">Finish</string>


</resources>