<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/door_home_home_page_homepage_house_svgrepo_com"
        android:title="@string/home"/>
    <item
        android:id="@+id/videoDownloadingFragment"
        android:icon="@drawable/download_svgrepo_com"
        android:title="@string/downloading"/>
    <item
        android:id="@+id/videoCompletedFragment"
        android:icon="@drawable/completed_order_svgrepo_com__1_"
        android:title="@string/completed"/>
<!--    <item
        android:id="@+id/videoReelFragment"
        android:icon="@drawable/film_reel_cinema_svgrepo_com"
        android:title="@string/reels"/>-->

    <item
        android:id="@+id/watchReelsFragment"
        android:icon="@drawable/ic_reels"
        android:title="@string/reels"/>

</menu>