<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/lottieAnimationView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/onboarding_img_1"
        app:layout_constraintDimensionRatio="1:0.7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/onboarding_title"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_loop="true" />

    <TextView
        android:id="@+id/onboarding_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/onboarding_title"
        android:textColor="@color/textColor"
        android:textSize="@dimen/_14sdp"
        android:layout_marginHorizontal="@dimen/_9sdp"
        android:textStyle="bold"
        android:maxLines="1"
        android:layout_marginTop="@dimen/_6sdp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/onboarding_description"
        app:layout_constraintTop_toBottomOf="@+id/lottieAnimationView" />

    <TextView
        android:id="@+id/onboarding_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/onboarding_description"
        android:textColor="#666666"
        android:textSize="@dimen/_11sdp"
        android:maxLines="3"
        android:gravity="center"
        android:layout_marginHorizontal="@dimen/_9sdp"
        android:layout_marginBottom="@dimen/_6sdp"
        app:layout_constraintBottom_toTopOf="@id/tv_next"
        app:layout_constraintTop_toBottomOf="@+id/onboarding_title" />



    <TextView
        android:id="@+id/tv_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/onboarding_description"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/next"
        android:textColor="#666666"
        android:layout_marginTop="@dimen/_4sdp"
        android:layout_marginBottom="@dimen/_4sdp"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintVertical_bias="1"
        android:layout_marginEnd="@dimen/_24sdp"

        app:layout_constraintBottom_toBottomOf="@id/onboarding_description"
        app:layout_constraintBottom_toTopOf="@+id/layout_native_container"

        />


    <include
        android:id="@+id/layout_native_container"
        layout="@layout/container_native_ad"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_230sdp"
        android:layout_marginHorizontal="@dimen/_6sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        android:visibility="visible"

        app:layout_constraintBottom_toBottomOf="parent"

         />




</androidx.constraintlayout.widget.ConstraintLayout>